force-app/main/default/objects/AI_Data_Extraction_Field__c/AI_Data_Extraction_Field__c.object-meta.xml
<CustomObject>
    <label>Data Context Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Context Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>