force-app/main/default/objects/AI_Data_Extraction_Field__c/fields/AI_Data_Extraction_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AI_Data_Extraction_Mapping__c</fullName>
    <label>AI Data Extraction Mapping</label>
    <referenceTo>AI_Data_Extraction_Mapping__c</referenceTo>
    <relationshipName>AI_Data_Extraction_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>