force-app/main/default/objects/AI_Data_Extraction_Field__c/fields/Anonymize_With__c.field-meta.xml
<CustomField>
    <fullName>Anonymize_With__c</fullName>
    <label>Anonymize With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PersonF{n}</fullName>
            </value>
            <value>
                <fullName>PersonL{n}</fullName>
            </value>
            <value>
                <fullName>PersonFull{n}</fullName>
            </value>
            <value>
                <fullName>removed{n}@removed.com</fullName>
            </value>
            <value>
                <fullName>Street{n}</fullName>
            </value>
            <value>
                <fullName>City{n}</fullName>
            </value>
            <value>
                <fullName>State{n}</fullName>
            </value>
            <value>
                <fullName>Country{n}</fullName>
            </value>
            <value>
                <fullName>Phone{n}</fullName>
            </value>
            <value>
                <fullName>Product{n}</fullName>
            </value>
            <value>
                <fullName>Company{n}</fullName>
            </value>
            <value>
                <fullName>{n}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>