force-app/main/default/objects/AI_Data_Extraction_Field__c/fields/Masking_Scope__c.field-meta.xml
<CustomField>
    <fullName>Masking_Scope__c</fullName>
    <label>Masking Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entire Value</fullName>
            </value>
            <value>
                <fullName>Specific Patterns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>