force-app/main/default/objects/AI_Data_Extraction_Field__c/fields/Scan_for_PII__c.field-meta.xml
<CustomField>
    <fullName>Scan_for_PII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scan for PII</label>
    <type>Checkbox</type>
</CustomField>