force-app/main/default/objects/AI_Data_Extraction_Field__c/fields/Send_To_AI__c.field-meta.xml
<CustomField>
    <fullName>Send_To_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To AI</label>
    <type>Checkbox</type>
</CustomField>